--- a/files/plugin.yml
+++ b/files/plugin.yml
@@ -1,5 +1,6 @@
 name: 'MiniGames'
 version: 1.0.0
+api-version: 1.14
 description: 'Plugin teste'
 author: 'GiverPlay007'
 main: me.giverplay.minigames.Game
