--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,12 @@
-# Compiled class file
-*.class
 
-# Log file
-*.log
+.gradle/
+.idea/
+build/
+libs/
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+*.iml
 *.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-/bin/
+gradle-app.setting
+!gradle-wrapper.jar
+.gradletasknamecache
