Criada a base do projeto: Entry point, comandos, implementação do algoritmo, renderização do fogo.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,11 @@
 name: DoomFire
 version: @version@
 main: me.giverplay.doomfire.DoomFire
-api-version: 1.16
-authors: [ GiverPlay ]
+api-version: 1.14
+authors: [ GiverPlay, Akira ]
 description: Implement Doom Fire algorithm in Bukkit and Spigot API
 website: https://github.com/foca-enterprises
+commands:
+  doomfire:
+    description: Comando principal
+    aliases: [ fire ]
